Bug 1555410 - Fixed unread email number break into next link ipad
behatnotneeded

--- a/htdocs/theme/raw/sass/layout/nav/_top-nav.scss
+++ b/htdocs/theme/raw/sass/layout/nav/_top-nav.scss
@@ -100,4 +100,9 @@
             }
         }
     }
+    .inbox {
+        a {
+            white-space: nowrap;
+        }
+    }
 }
